--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "app.mjs",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node app.mjs"
+        "start": "nodemon app.mjs",
+        "start-production": "node app.mjs"
     },
     "author": "",
     "license": "ISC",
